--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,6 @@
 	padding: 0;
 	box-sizing: border-box;
 	word-wrap: break-word;
-	word-break: break-all;
 }
 
 ul {
@@ -202,7 +201,7 @@ body {
 }
 
 .section {
-	height: 100vh;
+	min-height: 100vh;
 	width: 80%;
 	margin: auto;
 	display: flex;
@@ -941,8 +940,12 @@ video {
 }
 
 .😍{
+	max-width: 500px;
 	display: block;
 	margin: auto;
-
 }
-
+/* ---------------matchMedia-section------------------- */
+.matchMedia-section{
+	display: flex;
+	flex-wrap: wrap;
+}
