--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,10 @@ p{
 	color: #ffffff;
 	font-size: 1.2em;
 }
+button{
+	outline: none;
+	border: none;
+}
 
 .container {
 	width: 90%;
@@ -80,6 +84,10 @@ body {
 .header p {
 	font-size: 1.3em;
 	line-height: 2;
+}
+
+.hero{
+	color:#333;
 }
 
 .wave-header {
@@ -753,7 +761,7 @@ body {
 	color: #f3f3f3;
 
 	width: 100%;
-	height: 100%;
+	height: 80vh;
 
 	padding: 30px 0;
 	background: radial-gradient(rgba(255, 255, 255, 0.281) 60%, transparent);
